--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "19.0.0",
     "recharts": "2.15.0",
     "@google/genai": "1.3.0",
-    "lucide-react": "0.460.0",
-    "firebase": "^12.8.0"
+    "lucide-react": "0.460.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
